# math3model

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: deploy.yml
desktop/: Cargo.toml  build.rs
desktop/src/: main.rs
desktop/src/shaders/: main.wesl  util.wesl
math3render/: Cargo.toml  README.md  package-lock.json  package.json
math3render/.cargo/: config.toml
math3render/desktop/: Cargo.toml  README.md
math3render/desktop/benches/: gpu_bench.rs
math3render/desktop/src/: application.rs  main.rs
math3render/render/: Cargo.toml  README.md  build.rs
math3render/render/shaders/: Skybox.wgsl  compute_patches.wesl  ground_plane.wgsl
math3render/render/src/: application.rs  bind_cache.rs  buffer.rs  game.rs  gui.rs  input.rs  lib.rs  mesh.rs  renderer.rs  scene.rs  texture.rs  transform.rs  wgpu_context.rs  window_or_fallback.rs  windowed_application.rs
math3render/render/src/camera/: camera_and_settings.rs  camera_controller.rs  freecam_controller.rs  orbitcam_controller.rs
math3render/render/src/input/: current_input.rs  cursor_capture.rs  mod.rs  winit_helper.rs
math3render/render/src/renderer/: frame_data.rs  ground_plane.rs  parametric_model.rs  parametric_renderer.rs  scene.rs  skybox.rs  virtual_model.rs  wgpu_context.rs
math3render/render/src/time/: frame_counter.rs  time_counters.rs
math3render/shaders/: Cargo.toml  build.rs
math3render/shaders/src/: lib.rs
math3render/shaders/wgsl/: compute_patches.wesl  copy_patches.wesl  parametric_fn.wesl  pbr.wesl  render_patches.wesl  skybox.wgsl  uniforms_0.wgsl  uniforms_model.wesl  utils.wgsl
math3render/shaders/wgsl/samples/: DefaultParametric.wgsl  HeartSphere.wgsl
math3render/wasm/: Cargo.toml  README.md
math3render/wasm/src/: application.rs  lib.rs  wasm_abi.rs
src/: App.vue  globals.ts  main.ts  monaco-setup.ts  notification.ts  wasm-bindgen-plugin.ts
src/components/: CodeEditor.vue  EditorAndOutput.vue  FileBrowser.vue  FocusObject.vue  ImportDialog.vue  SceneHierarchy.vue  TopBar.vue  use-open-file.ts
src/components/input/: AngleInput.vue  ColorInput.vue  EulerInput.vue  NumberInput.vue  VectorInput.vue
src/components/node-tree/: NodeTree.vue  NodeTreeRender.vue  SingleFile.vue
src/content-store/: content-file.ts  content-fs-sync.ts  content-store.test.ts  content-store.ts
src/engine/: sync-filesystem.ts  wgpu-engine.ts
src/filesystem/: reactive-files.ts  scene-file.ts
src/scenes/: aggregrate-model-state.ts  default-scene.ts  example-scenes.ts  scene-state.ts
src/scenes/example-scene/dwagon/: cute-dwagon.wgsl  scene.json
src/scenes/example-scene/heart-sphere-morph/: scene.json
src/scenes/example-scene/shapes-showcase/: heart.wgsl  palm-tree-trunk.wgsl  palm-tree.wgsl  seashell.wgsl  spherehog.wgsl
src/scenes/example-scene/temple/: TempleBody.wgsl  TempleColumns.wgsl  TempleRoof.wgsl  TempleSteps.wgsl  scene.json
src/scenes/example-scene/tower/: TowerBase.wgsl  TowerTop.wgsl  scene.json
src/scenes/example-scene/trees-and-terrain/: Terrain.wgsl  Trees.wgsl
src/stores/: error-store.ts  fs-store.ts
src/views/: HomeView.vue
