[workspace]
resolver = "3"

members = ["desktop"]


[workspace.dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
encase = { version = "0.10.0", features = ["glam"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
log = "0.4.27"

[profile.dev]
# debug = "line-tables-only"
opt-level = 1
# strip = true

[profile.dev.package."*"]
opt-level = 2
