[workspace]
resolver = "3"

members = ["desktop"]

[workspace.dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
dioxus-devtools = { version = "0.7.0-alpha.0", git = "https://github.com/DioxusLabs/dioxus.git", rev = "9027ffc" }
encase = { version = "0.11.0", features = ["glam"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
log = "0.4.27"

# Don't set opt-level = 1 for dev profile. Now we're much faster.

[profile.dev.package."*"]
opt-level = 2

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
