[workspace]
resolver = "3"

members = ["desktop"]


[workspace.dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
encase = { version = "0.11.0", features = ["glam"] }
glam = { version = "0.30.3", features = ["bytemuck"] }
log = "0.4.27"

[profile.dev]
# debug = "line-tables-only"
opt-level = 1
# strip = true

[profile.dev.package."*"]
opt-level = 2
