[package]
name = "desktop"
version = "0.2.0"
edition = "2024"
default-run = "desktop"

[dependencies]
anyhow = "1.0"
env_logger = { version = "0.11.8", default-features = false }
glam = { workspace = true }
log = { workspace = true }
nanoserde = { workspace = true }
pollster = "0.4.0"
render = { features = ["desktop"], path = "../render" }
shaders = { path = "../shaders" }
wgpu = { workspace = true, features = ["vulkan", "wgsl"] }
winit = { workspace = true }

[features]
default = []