[package]
name = "render"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[lib]
bench = false

[[bench]]
harness = false
name = "gpu_bench"

[dependencies]
any_spawner = { version = "0.2.0" }
anyhow = "1.0"
bytemuck = { workspace = true }
encase = { workspace = true }
futures = { version = "0.3.31", default-features = false, features = [
  "executor",
] }
futures-channel = "0.3.31"
glam = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
notify-debouncer-full = { version = "0.5.0", optional = true }
reactive_graph = { workspace = true }
uuid = { workspace = true }
web-time = "1.1.0"
wgpu = { workspace = true }
wgpu-profiler = "0.22.0"
winit = { workspace = true }

[dev-dependencies]
any_spawner = { version = "0.2.0-rc3", features = ["futures-executor"] }
criterion2 = "3.0.0"
pollster = "0.4.0"

[build-dependencies]
wgsl_to_wgpu = { version = "0.13.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = [
  "ImageBitmap",
  "HtmlCanvasElement",
] }

[features]
default = []
desktop = ["notify-debouncer-full"]
