[package]
name = "render"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[lib]
bench = false

[dependencies]
anyhow = "1.0"
bytemuck = { workspace = true }
encase = { workspace = true }
futures = { version = "0.3.31", default-features = false, features = [
  "executor",
] }
futures-channel = "0.3.31"
glam = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
nanoserde = { workspace = true }
notify-debouncer-full = { version = "0.5.0", optional = true }
web-time = "1.1.0"
wgpu = { workspace = true }
wgpu-profiler = "0.24.0"
winit = { workspace = true }

[build-dependencies]
wesl = { git = "https://github.com/wgsl-tooling-wg/wesl-rs" }
wgsl_to_wgpu = { version = "0.15.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = [
  "ImageBitmap",
  "HtmlCanvasElement",
] }

[features]
default = []
desktop = ["notify-debouncer-full"]
