[package]
name = "render"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arcshift = "0.4.0"
bytemuck = { workspace = true }
egui = { version = " 0.32.0" }
egui-wgpu = { version = " 0.32.0" }
encase = { workspace = true }
futures-channel = "0.3.31"
glam = { workspace = true }
log = { workspace = true }
nanoserde = { workspace = true }
notify-debouncer-full = { version = "0.5.0", optional = true }
shaders = { path = "../shaders" }
web-time = "1.1.0"
wesl = { workspace = true }
wgpu = { workspace = true }
wgpu-profiler = "0.24.0"
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = [
  "ImageBitmap",
  "HtmlCanvasElement",
] }

[features]
default = []
desktop = ["notify-debouncer-full"]
