[package]
name = "shaders"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bytemuck = { workspace = true }
encase = { workspace = true }
glam = { workspace = true }
wesl = { workspace = true }
wgpu = { workspace = true }

[build-dependencies]
wesl = { workspace = true, features = ["package"] }
wgsl_to_wgpu = { version = "0.15.1" }