[package]
name = "web"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
any_spawner = { version = "0.2.0" }
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
glam = { workspace = true }
log = { workspace = true }
render = { path = "../render" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify-next = "0.5.5"
uuid = { workspace = true, features = [
  "js",
] }  # Needed for the UUID crate that the render uses
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "HtmlCanvasElement",
  "ImageBitmap",
] }
wgpu = { workspace = true, features = [
  "fragile-send-sync-non-atomic-wasm",
  "webgpu",
] }
winit = { workspace = true }
