[package]
name = "web"
version = "0.2.0"
edition = "2024"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
glam = { workspace = true }
log = { workspace = true }
render = { path = "../render" }
serde = { version = "1.0", features = ["derive"] }
tsify = "0.5.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "HtmlCanvasElement",
  "ImageBitmap",
] }
wgpu = { workspace = true, features = [
  "fragile-send-sync-non-atomic-wasm",
  "webgpu",
  "wgsl",
] }
winit = { workspace = true }
